// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builder rspack > should allow custom arco import config 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\^\\\\\\?raw\\$/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.45",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
            "import": [
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": false,
              },
            ],
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\^\\\\\\?raw\\$/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`builder rspack > should allow filter arco import config 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\^\\\\\\?raw\\$/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.45",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\^\\\\\\?raw\\$/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`builder rspack > should apply arco correctly 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\^\\\\\\?raw\\$/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.45",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
            "import": [
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
            ],
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\^\\\\\\?raw\\$/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`builder rspack > should not apply arco when transformImport false 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\^\\\\\\?raw\\$/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.45",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\^\\\\\\?raw\\$/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`builder rspack > should not apply arco when transformImport return custom array 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\^\\\\\\?raw\\$/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.45",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
            "import": [
              {
                "libraryName": "foo",
              },
            ],
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\^\\\\\\?raw\\$/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;
